Use standard travis and codecov setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,37 @@
+dist: trusty
 language: c
-compiler:
-  - gcc
 env:
   global:
-    - IO=io-4.4.6
-    - DIGRAPHS=digraphs-0.5.2
-    - GAPDOC=GAPDoc-1.5.1
-    - PROFILING=profiling-1.1.0
-    - ORB=orb-4.7.6
-  matrix:
-    - GAP_BRANCH=master GAP_FORK=gap-system
-    - GAP_BRANCH=stable-4.8 GAP_FORK=gap-system
+    - GAPROOT=gaproot
+    - COVDIR=coverage
+
 addons:
-  apt:
-    packages:
-      - libgmp-dev
+  apt_packages:
+    - libgmp-dev
+    - libreadline-dev
+    - libgmp-dev:i386
+    - libreadline-dev:i386
+    - gcc-multilib
+    - g++-multilib
+
+matrix:
+  include:
+    - env: CFLAGS="-O2"
+      compiler: clang
+    - env: CFLAGS="-O2"
+      compiler: gcc
+    - env: CFLAGS=""  # test build w/o optimization
+    - env: ABI=32
+
+branches:
+  only:
+    - master
+
+before_script:
+  - scripts/build_gap.sh
 script:
-  - scripts/travis-build.sh
-  - scripts/travis-test.sh
+  - scripts/build_pkg.sh
+  - scripts/run_tests.sh
+after_script:
+  - bash scripts/gather-coverage.sh
+  - bash <(curl -s https://codecov.io/bash)
