--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,75 +1,76 @@
-name: GitHubPagesForGAP
-version: 0.2
-date: 2017-02-04
+name: walrus
+version: 0.6
+date: 2018-06-21
 description: |
-    A GitHub Pages generator for GAP packages
+    A new approach to proving hyperbolicity
 
 authors:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: A. U. Thor
+    - name: Markus Pfeiffer
+      url: http://www.morphism.de/~markusp/
 
 maintainers:
-    - name: Max Horn
-      url: http://www.quendi.de/math
-    - name: Jan Itor
+    - name: Markus Pfeiffer
+      url: http://www.morphism.de/~markusp/
 
-GAP: ">=4.8.1"
+GAP: ">= 4.8"
 
 needed-pkgs:
     - name: "GAPDoc"
-      version: ">= 1.2"
+      version: ">= 1.5"
       url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
-    - name: "IO"
-      version: ">= 4.1"
-      url: "https://gap-packages.github.io/io"
+    - name: "datastructures"
+      version: "0.1.2"
+      url: "https://gap-packages.github.io/datastructures"
+    - name: "digraphs"
+      version: ">= 0.10"
+      url: "https://gap-packages.github.io/Digraphs"
+    - name: "kbmag"
+      version: ">= 1.5.4"
+      url: "https://gap-packages.github.io/kbmag"
 
 suggested-pkgs:
-    - name: "orb"
-      version: ">= 4.2"
-      url: "https://gap-packages.github.io/orb"
+    - name: "profiling"
+      version: " >= 1.3.0"
+      url: "http://gap-packages.github.io/profiling/"
 
-www: https://gap-system.github.io/GitHubPagesForGAP/
+www: https://gap-packages.github.io/walrus
 readme: README.md
-packageinfo: https://gap-system.github.io/GitHubPagesForGAP/PackageInfo.g
-github: https://github.com/gap-system/GitHubPagesForGAP
+packageinfo: https://gap-packages.github.io/walrus/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-system/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.gz
-    - name: .tar.bz2
-      url: https://github.com/gap-system/GitHubPagesForGAP/releases/download/v0.2/GitHubPagesForGAP-0.2.tar.bz2
+      url: https://github.com/gap-packages/walrus/releases/download/v0.6/walrus-0.6.tar.gz
 
 abstract: |
-    This is a pseudo package that contains no actual  <span class="pkgname">GAP</span> code. Instead, it is a template for other  GAP packages that allows to quickly setup GitHub Pages.
+    An implementation of hyperbolicity testing using an ideas
+    by Richard Parker, Derek Holt, Colva Roney-Dougal, Max Neunhöffer,
+    and probably quite a few more
 
-status: other
+status: dev
 doc-html: doc/chap0.html
 doc-pdf: doc/manual.pdf
 keywords: |
-    GitHub Pages, GAP.
+    Finitely Generated, group, monoid, hyperbolic.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>HTI17</span>]   <b class='BibAuthor'>Horn, M., Thor, A. U. and Itor, J.</b>,
-     <i class='BibTitle'>GitHubPagesForGAP, A GitHub Pages generator for GAP packages,
-             Version 0.2</i>
-     (<span class='BibYear'>2017</span>)<br />
+    [<span class='BibKey'>Pfe18</span>]   <b class='BibAuthor'>Pfeiffer, M.</b>,
+     <i class='BibTitle'>walrus, A new approach to proving hyperbolicity,
+             Version 0.6</i>
+     (<span class='BibYear'>2018</span>)<br />
     (<span class='BibNote'>GAP package</span>),
-    <span class='BibHowpublished'><a href="https://gap-system.github.io/GitHubPagesForGAP/">https://gap-system.github.io/GitHubPagesForGAP/</a></span>.
+    <span class='BibHowpublished'><a href="https://gap-packages.github.io/walrus">https://gap-packages.github.io/walrus</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ GitHubPagesForGAP0.2,
-      author =           {Horn, M. and Thor, A. U. and Itor, J.},
-      title =            {{GitHubPagesForGAP}, A GitHub Pages generator for GAP packages, {V}ersion 0.2},
-      month =            {Feb},
-      year =             {2017},
+    @misc{ walrus0.6,
+      author =           {Pfeiffer, M.},
+      title =            {{walrus}, A new approach to proving hyperbolicity, {V}ersion 0.6},
+      month =            {Jun},
+      year =             {2018},
       note =             {GAP package},
-      howpublished =     {\href                              {https://gap-system.github.io/GitHubPagesForGAP/}
-                          {\texttt{https://gap-system.github.io/}\discretionary
-                          {}{}{}\texttt{GitHubPagesForGAP/}}},
-      keywords =         {GitHub Pages; GAP},
-      printedkey =       {HTI17}
+      howpublished =     {\href {https://gap-packages.github.io/walrus} {\texttt{https://gap-packages.github.io/}\discretionary {}{}{}\texttt{walrus}}},
+      keywords =         {Finitely Generated; group; monoid; hyperbolic},
+      printedkey =       {Pfe18}
     }
 
