--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: walrus
-version: 0.6
-date: 2018-06-21
+version: 0.8
+date: 2019-02-08
 description: |
     A new approach to proving hyperbolicity
 
@@ -12,14 +12,14 @@ maintainers:
     - name: Markus Pfeiffer
       url: http://www.morphism.de/~markusp/
 
-GAP: ">= 4.8"
+GAP: ">= 4.10"
 
 needed-pkgs:
     - name: "GAPDoc"
       version: ">= 1.5"
       url: "http://www.math.rwth-aachen.de/~Frank.Luebeck/GAPDoc"
     - name: "datastructures"
-      version: "0.1.2"
+      version: "0.2.2"
       url: "https://gap-packages.github.io/datastructures"
     - name: "digraphs"
       version: ">= 0.10"
@@ -31,7 +31,7 @@ needed-pkgs:
 suggested-pkgs:
     - name: "profiling"
       version: " >= 1.3.0"
-      url: "http://gap-packages.github.io/profiling/"
+      url: "https://gap-packages.github.io/profiling/"
 
 www: https://gap-packages.github.io/walrus
 readme: README.md
@@ -39,11 +39,11 @@ packageinfo: https://gap-packages.github.io/walrus/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/walrus/releases/download/v0.6/walrus-0.6.tar.gz
+      url: https://github.com/gap-packages/walrus/releases/download/v0.8/walrus-0.8.tar.gz
 
 abstract: |
     An implementation of hyperbolicity testing using an ideas
-    by Richard Parker, Derek Holt, Colva Roney-Dougal, Max Neunhöffer,
+    by Derek Holt, Max Neunhöffer, Richard Parker, and Colva Roney-Dougal,
     and probably quite a few more
 
 status: dev
@@ -53,24 +53,27 @@ keywords: |
     Finitely Generated, group, monoid, hyperbolic.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>Pfe18</span>]   <b class='BibAuthor'>Pfeiffer, M.</b>,
+    [<span class='BibKey'>Pfe19</span>]   <b class='BibAuthor'>Pfeiffer, M.</b>,
      <i class='BibTitle'>walrus, A new approach to proving hyperbolicity,
-             Version 0.6</i>
-     (<span class='BibYear'>2018</span>)<br />
+             Version 0.8</i>
+     (<span class='BibYear'>2019</span>)<br />
     (<span class='BibNote'>GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/walrus">https://gap-packages.github.io/walrus</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ walrus0.6,
+    @misc{ walrus0.8,
       author =           {Pfeiffer, M.},
-      title =            {{walrus}, A new approach to proving hyperbolicity, {V}ersion 0.6},
-      month =            {Jun},
-      year =             {2018},
+      title =            {{walrus},  A  new  approach  to proving hyperbolicity,
+                          {V}ersion 0.8},
+      month =            {Feb},
+      year =             {2019},
       note =             {GAP package},
-      howpublished =     {\href {https://gap-packages.github.io/walrus} {\texttt{https://gap-packages.github.io/}\discretionary {}{}{}\texttt{walrus}}},
+      howpublished =     {\href          {https://gap-packages.github.io/walrus}
+                          {\texttt{https://gap-packages.github.io/}\discretionary
+                          {}{}{}\texttt{walrus}}},
       keywords =         {Finitely Generated; group; monoid; hyperbolic},
-      printedkey =       {Pfe18}
+      printedkey =       {Pfe19}
     }
 
