--- a/_data/package.yml
+++ b/_data/package.yml
@@ -1,6 +1,6 @@
 name: walrus
-version: 0.999
-date: 2019-12-19
+version: 0.9991
+date: 2022-02-21
 description: |
     A new approach to proving hyperbolicity
 
@@ -23,7 +23,7 @@ needed-pkgs:
       url: "https://gap-packages.github.io/datastructures"
     - name: "digraphs"
       version: ">= 0.10"
-      url: "https://gap-packages.github.io/Digraphs"
+      url: "https://digraphs.github.io/Digraphs"
 
 suggested-pkgs:
     - name: "profiling"
@@ -39,41 +39,41 @@ packageinfo: https://gap-packages.github.io/walrus/PackageInfo.g
 
 downloads:
     - name: .tar.gz
-      url: https://github.com/gap-packages/walrus/releases/download/v0.999/walrus-0.999.tar.gz
+      url: https://github.com/gap-packages/walrus/releases/download/v0.9991/walrus-0.9991.tar.gz
 
 abstract: |
     An implementation of hyperbolicity testing using an ideas
     by Derek Holt, Max Neunhöffer, Richard Parker, and Colva Roney-Dougal,
     and probably quite a few more
 
-status: dev
+status: deposited
 doc-html: doc/chap0.html
 doc-pdf: doc/manual.pdf
 keywords: |
     Finitely Generated, group, monoid, hyperbolic.
 citeas: |
     <p class='BibEntry'>
-    [<span class='BibKey'>Pfe19</span>]   <b class='BibAuthor'>Pfeiffer, M.</b>,
+    [<span class='BibKey'>Pfe22</span>]   <b class='BibAuthor'>Pfeiffer, M.</b>,
      <i class='BibTitle'>walrus, A new approach to proving hyperbolicity,
-             Version 0.999</i>
-     (<span class='BibYear'>2019</span>)<br />
+             Version 0.9991</i>
+     (<span class='BibYear'>2022</span>)<br />
     (<span class='BibNote'>GAP package</span>),
     <span class='BibHowpublished'><a href="https://gap-packages.github.io/walrus">https://gap-packages.github.io/walrus</a></span>.
     </p>
     
 
 bibtex: |
-    @misc{ walrus0.999,
+    @misc{ walrus0.9991,
       author =           {Pfeiffer, M.},
       title =            {{walrus},  A  new  approach  to proving hyperbolicity,
-                          {V}ersion 0.999},
-      month =            {Dec},
-      year =             {2019},
+                          {V}ersion 0.9991},
+      month =            {Feb},
+      year =             {2022},
       note =             {GAP package},
       howpublished =     {\href          {https://gap-packages.github.io/walrus}
                           {\texttt{https://gap-packages.github.io/}\discretionary
                           {}{}{}\texttt{walrus}}},
       keywords =         {Finitely Generated; group; monoid; hyperbolic},
-      printedkey =       {Pfe19}
+      printedkey =       {Pfe22}
     }
 
